Create turbines endpoints
